to_deploy_2.9_to_prod01

--- a/.env
+++ b/.env
@@ -1,9 +1,12 @@
-CKAN_VERSION=2.10.1
-PYTHON_IMG_TAG=3.10
+CKAN_VERSION=2.9
+PYTHON_IMG_TAG=3.9
 POSTGRES_IMG_TAG=15
 SOLR_IMG_TAG=8.11
-REDIS_IMG_TAG=7.2
-NGINX_IMG_TAG=1.25
-MAINTAINER=sam.woodcock@protonmail.com
+REDIS_IMG_TAG=6.2
+NGINX_IMG_TAG=1.23
+NGINX_CONFIG_NAME=prod
+MAINTAINER=envidat@wsl.ch
 INTERNAL_REG=registry-gitlab.wsl.ch/envidat
 EXTERNAL_REG=docker.io
+
+
