CI: change to trigger remote-docker manually

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -237,6 +237,11 @@ remote-docker:
   stage: deploy
   environment: $CI_COMMIT_REF_NAME
   image: docker.io/docker:24.0
+  rules:
+#    - if: $CI_COMMIT_REF_NAME == "main"
+#      when: manual
+    - if: $CI_PIPELINE_SOURCE == "web"
+      when: manual
   only:
     - branches
   variables:
