--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -238,8 +238,8 @@ remote-docker:
   environment: $CI_COMMIT_REF_NAME
   image: docker.io/docker:24.0
   rules:
-#    - if: $CI_COMMIT_REF_NAME == "main"
-#      when: manual
+    - if: $CI_COMMIT_REF_NAME == "main"
+      when: always
     - if: $CI_PIPELINE_SOURCE == "web"
       when: manual
 #  only:
