--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -237,13 +237,38 @@ remote-docker:
   stage: deploy
   environment: $CI_COMMIT_REF_NAME
   image: docker.io/docker:24.0
+  only:
+    - branches
+  variables:
+    DOCKER_HOST: "ssh://$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME"
+  before_script:
+    - echo "$CKAN_INI" > ckan.ini
+    - echo "$DB_ENV" > .db.env
+    - echo "$SOLR_ENV" > .solr.env
+    - echo "Adding SSH Key"
+    - mkdir -p ~/.ssh
+    - echo "$DEPLOY_SSH_KEY" > ~/.ssh/gitlab
+    - chmod 400 ~/.ssh/gitlab
+    - echo 'IdentityFile ~/.ssh/gitlab' > ~/.ssh/config
+    - ssh-keyscan -H $DEPLOY_HOSTNAME >> ~/.ssh/known_hosts
+  script:
+    - |
+      USER_DIR=$(echo "/home/$DEPLOY_SSH_USER")
+      ssh "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME" "mkdir -p $USER_DIR/config/ckan"
+      scp ckan.ini "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME:$USER_DIR/config/ckan/$CI_COMMIT_REF_NAME.ini"
+      HOME=$USER_DIR docker compose \
+        --project-name="$APP_NAME" \
+        --file "docker-compose.$CI_COMMIT_REF_NAME.yml" \
+        up --detach --force-recreate
+
+manual-remote-docker:
+  stage: deploy
+  environment: $CI_COMMIT_REF_NAME
+  image: docker.io/docker:24.0
+  when: manual
   rules:
-    - if: $CI_COMMIT_REF_NAME == "main"
-      when: always
     - if: $CI_PIPELINE_SOURCE == "web"
       when: manual
-#  only:
-#    - branches
   variables:
     DOCKER_HOST: "ssh://$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME"
   before_script:
