--- a/.gitlab-ci-package.yml
+++ b/.gitlab-ci-package.yml
@@ -4,6 +4,8 @@
   image: docker.io/regclient/regctl:v0.3-alpine
   variables:
     GIT_STRATEGY: none
+  needs:
+    - set-vars
   before_script:
     - export REG_HOST=${INTERNAL_REG%/*}
     - >
@@ -17,30 +19,40 @@
     - regctl --verbosity debug tag delete "${IMAGE_NAME}-unverified"
 
 ckan-retag:
+  needs:
+    - ckan-scan
   extends:
     - .retag
   variables:
     IMAGE_NAME: ${CKAN_IMAGE}
 
 proxy-retag:
+  needs:
+    - proxy-scan
   extends:
     - .retag
   variables:
     IMAGE_NAME: ${PROXY_IMAGE}
 
 db-retag:
+  needs:
+    - db-scan
   extends:
     - .retag
   variables:
     IMAGE_NAME: ${DB_IMAGE}
 
 solr-retag:
+  needs:
+    - solr-scan
   extends:
     - .retag
   variables:
     IMAGE_NAME: ${SOLR_IMAGE}
 
 solr-init-retag:
+  needs:
+    - solr-init-scan
   extends:
     - .retag
   variables:
