--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -145,7 +145,9 @@ remote-docker:
     - echo "$DEPLOY_SSH_KEY" > ~/.ssh/gitlab
     - chmod 400 ~/.ssh/gitlab
     - echo 'IdentityFile ~/.ssh/gitlab' > ~/.ssh/config
+    - echo "going to keyscan on HOST ${DEPLOY_HOSTNAME}"
     - ssh-keyscan -H $DEPLOY_HOSTNAME >> ~/.ssh/known_hosts
+  #    - cat ~/.ssh/known_hosts
   script:
     - |
       USER_DIR=$(echo "/home/$DEPLOY_SSH_USER")
@@ -179,13 +181,17 @@ manual-remote-docker:
     - echo 'IdentityFile ~/.ssh/gitlab' > ~/.ssh/config
     - echo "going to keyscan on HOST ${DEPLOY_HOSTNAME}"
     - ssh-keyscan -H $DEPLOY_HOSTNAME >> ~/.ssh/known_hosts
-    - cat ~/.ssh/known_hosts
+#    - cat ~/.ssh/known_hosts
   script:
     - USER_DIR=$(echo "/home/$DEPLOY_SSH_USER")
     - echo "Defined USER_DIR ${USER_DIR}"
+    - echo "Going to create the config/ckan directory for the ckan.ini file"
+    - ssh "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME" "mkdir -p $USER_DIR/config/ckan"
+    - ll
+    - echo "Going to copy the local ckan.ini file to ${USER_DIR}/config/ckan/${CI_COMMIT_REF_NAME}.ini"
+    - scp ckan.ini "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME:$USER_DIR/config/ckan/$CI_COMMIT_REF_NAME.ini"
+    - echo "Going to remotely start the docker-compose.${CI_COMMIT_REF_NAME}.yml on ${DEPLOY_SSH_USER}@${DEPLOY_HOSTNAME}"
     - |
-      ssh "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME" "mkdir -p $USER_DIR/config/ckan"
-      scp ckan.ini "$DEPLOY_SSH_USER@$DEPLOY_HOSTNAME:$USER_DIR/config/ckan/$CI_COMMIT_REF_NAME.ini"
       HOME=$USER_DIR docker compose \
         --project-name="$APP_NAME" \
         --file "docker-compose.$CI_COMMIT_REF_NAME.yml" \
