--- a/docker-compose.main.yml
+++ b/docker-compose.main.yml
@@ -20,7 +20,7 @@ services:
       CKAN_INI: "/opt/ckan/ckan.ini"
     volumes:
       - ckan_storage:/opt/ckan/data
-      - $HOME/config/ckan/2.9-backup.ini:/opt/ckan/ckan.ini
+      - $HOME/config/ckan/main.ini:/opt/ckan/ckan.ini
       - ckan_translations:/usr/lib/ckan/.local/lib/python3.10/site-packages/ckan/public/base/i18n
     networks:
       - ckan-internal
