--- a/.gitlab-ci-package.yml
+++ b/.gitlab-ci-package.yml
@@ -21,6 +21,7 @@ ckan-retag:
     - set-vars
     - ckan-scan
   extends:
+    - .triggers    
     - .retag
   variables:
     IMAGE_NAME: ${CKAN_IMAGE}
@@ -30,6 +31,7 @@ proxy-retag:
     - set-vars
     - proxy-scan
   extends:
+    - .triggers    
     - .retag
   variables:
     IMAGE_NAME: ${PROXY_IMAGE}
@@ -39,6 +41,7 @@ db-retag:
     - set-vars
     - db-scan
   extends:
+    - .triggers    
     - .retag
   variables:
     IMAGE_NAME: ${DB_IMAGE}
@@ -48,6 +51,7 @@ solr-retag:
     - set-vars
     - solr-scan
   extends:
+    - .triggers    
     - .retag
   variables:
     IMAGE_NAME: ${SOLR_IMAGE}
@@ -57,6 +61,7 @@ solr-init-retag:
     - set-vars
     - solr-init-scan
   extends:
+    - .triggers    
     - .retag
   variables:
     IMAGE_NAME: ${SOLR_INIT_IMAGE}
