--- a/.gitlab-ci-scan.yml
+++ b/.gitlab-ci-scan.yml
@@ -39,6 +39,7 @@ ckan-scan:
     - set-vars
     - ckan-build
   extends:
+    - .triggers    
     - .scan
   variables:
     IMAGE_NAME: ${CKAN_IMAGE}
@@ -50,6 +51,7 @@ proxy-scan:
     - set-vars
     - proxy-build
   extends:
+    - .triggers    
     - .scan
   variables:
     IMAGE_NAME: ${PROXY_IMAGE}
@@ -60,6 +62,7 @@ db-scan:
     - set-vars
     - db-build
   extends:
+    - .triggers    
     - .scan
   variables:
     IMAGE_NAME: ${DB_IMAGE}
@@ -70,6 +73,7 @@ solr-scan:
     - set-vars
     - solr-build
   extends:
+    - .triggers    
     - .scan
   variables:
     IMAGE_NAME: ${SOLR_IMAGE}
@@ -81,6 +85,7 @@ solr-init-scan:
     - set-vars
     - solr-init-build
   extends:
+    - .triggers    
     - .scan
   variables:
     IMAGE_NAME: ${SOLR_INIT_IMAGE}
