adding network envidat to docker-compose and changing the image for ckan

--- a/docker-compose.2.9.yml
+++ b/docker-compose.2.9.yml
@@ -1,11 +1,11 @@
-version: "3"
-
 volumes:
   ckan_storage:
   ckan_translations:
   solr_data:
 
 networks:
+  ckan-microservices:
+    name: envidat
   ckan-internal:
     name: ckan-2.9
 
