--- a/docker-compose.main.yml
+++ b/docker-compose.main.yml
@@ -1,18 +1,19 @@
-version: "3"
-
 volumes:
   ckan_storage:
   ckan_translations:
   solr_data:
 
 networks:
+  ckan-microservices:
+    name: envidat
   ckan-internal:
     name: ckan-prod
 
 services:
   ckan:
     container_name: ckan_main
-    image: "${INTERNAL_REG}/ckan-container/ckan:${CKAN_VERSION}-main"
+    #image: "${INTERNAL_REG}/ckan-container/ckan:${CKAN_VERSION}-main"
+    image: "${INTERNAL_REG}/ckan-container/ckan:2.9-backup"
     build:
       context: .
       target: prod
