--- a/.gitlab-ci-scan.yml
+++ b/.gitlab-ci-scan.yml
@@ -40,6 +40,7 @@ ckan-scan:
   needs:
     - ckan-build
   extends:
+    - .triggers
     - .scan
   variables:
     IMAGE_NAME: ${CKAN_IMAGE}
@@ -50,6 +51,7 @@ proxy-scan:
   needs:
     - proxy-build
   extends:
+    - .triggers
     - .scan
   variables:
     IMAGE_NAME: ${PROXY_IMAGE}
@@ -59,6 +61,7 @@ db-scan:
   needs:
     - db-build
   extends:
+    - .triggers
     - .scan
   variables:
     IMAGE_NAME: ${DB_IMAGE}
@@ -68,6 +71,7 @@ solr-scan:
   needs:
     - solr-build
   extends:
+    - .triggers
     - .scan
   variables:
     IMAGE_NAME: ${SOLR_IMAGE}
@@ -78,6 +82,7 @@ solr-init-scan:
   needs:
     - solr-init-build
   extends:
+    - .triggers
     - .scan
   variables:
     IMAGE_NAME: ${SOLR_INIT_IMAGE}
