--- a/requirements-extra.txt
+++ b/requirements-extra.txt
@@ -1,11 +1,13 @@
 # WSGI server
-gunicorn==21.2.0
-boto3==1.20.26
+gunicorn==20.1.0
+#gunicorn==21.2.0
+#boto3==1.20.26
 
 # Plugins
 ## Latest scheming on pypi release Nov 2022
-#ckanext-hierarchy==1.2.0
+ckanext-hierarchy==1.2.0
 #ckanext-passwordless-api==1.1.8
+## for ckan 2.9
 ckanext-passwordless-api==1.1.1
 #ckanext-scheming==2.1.0
 
