nginx settings to allow https connections

--- a/nginx/templates/ckan.conf.template
+++ b/nginx/templates/ckan.conf.template
@@ -6,6 +6,12 @@ upstream ckan {
     keepalive 32;
 }
 
+# Some additional settings for staging
+map $scheme$host $cors_origin {
+    default "";
+    http$host  "http://$host";
+    https$host "https://$host";
+}
 
 server {
 
@@ -27,8 +33,12 @@ server {
     location / {
         add_header 'Content-Security-Policy' $upgrade_policy;
         add_header 'Access-Control-Allow-Credentials' 'true';
-        # For opentelemetry 
-        add_header 'Access-Control-Allow-Headers' 'traceparent,tracestate';
+        # Some additional settings for staging https://envidat04
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, traceparent, tracestate';
+        # Specify the allowed frontend origin
+        add_header 'Access-Control-Allow-Origin' $cors_origin;
+
         proxy_read_timeout 40s;
         proxy_connect_timeout 20s;
 
