--- a/nginx/templates/ckan.conf.template
+++ b/nginx/templates/ckan.conf.template
@@ -6,12 +6,6 @@ upstream ckan {
     keepalive 32;
 }
 
-# Some additional settings for staging
-map $scheme$host $cors_origin {
-    default "";
-    http$host  "http://$host";
-    https$host "https://$host";
-}
 
 server {
 
@@ -33,12 +27,8 @@ server {
     location / {
         add_header 'Content-Security-Policy' $upgrade_policy;
         add_header 'Access-Control-Allow-Credentials' 'true';
-        # Some additional settings for staging https://envidat04
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, traceparent, tracestate';
-        # Specify the allowed frontend origin
-        add_header 'Access-Control-Allow-Origin' $cors_origin;
-
+        # For opentelemetry 
+        add_header 'Access-Control-Allow-Headers' 'traceparent,tracestate';
         proxy_read_timeout 40s;
         proxy_connect_timeout 20s;
 
