--- a/nginx/templates/ckan.conf.template
+++ b/nginx/templates/ckan.conf.template
@@ -49,6 +49,8 @@ server {
             set $auth_token $cookie_${AUTH_COOKIE_NAME};
         }
         proxy_set_header 'Authorization' $auth_token;
+        # Strip out ckan cookie (not required)
+        proxy_set_header Cookie "ckan=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;";
         
         proxy_cache cache;
         proxy_cache_bypass $cookie_${AUTH_COOKIE_NAME};
@@ -66,6 +68,10 @@ server {
         # In emergency comment out line to force caching
         #proxy_ignore_headers X-Accel-Expires Expires Cache-Control;
 
+    }
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
     }
     
 }
