additinal change to the previous pipeline condition

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -193,6 +193,7 @@ manual-remote-docker:
   needs:
     - set-vars
   rules:
+    - if: '$CI_PIPELINE_SOURCE != "merge_request_event"'
     - if: '$CI_PIPELINE_SOURCE == "pipeline"'
       when: always
     - when: manual
