--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -193,8 +193,9 @@ manual-remote-docker:
   needs:
     - set-vars
   rules:
-    - if: '$CI_PIPELINE_SOURCE != "merge_request_event"'
-    - if: '$CI_PIPELINE_SOURCE == "pipeline"'
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+      when: never
+    - if: '$CI_PIPELINE_SOURCE == "parent_pipeline"'
       when: always
     - when: manual
   # for manaul jobs add allow_failure so the whole pipeline won't show up as "blocked"
