removing ckanext hierarchy, already there in envidat_extensions

--- a/requirements-extra.txt
+++ b/requirements-extra.txt
@@ -5,7 +5,7 @@ gunicorn==20.1.0
 
 # Plugins
 ## Latest scheming on pypi release Nov 2022
-ckanext-hierarchy==1.2.0
+#ckanext-hierarchy==1.2.0
 #ckanext-passwordless-api==1.1.8
 ## for ckan 2.9
 ckanext-passwordless-api==1.1.1
