CI: added docker login for build jobs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,6 +66,9 @@ set-vars:
     name: gcr.io/kaniko-project/executor:v1.9.1-debug
     entrypoint: [""]
   before_script:
+    # Log in to Docker Hub using the username and token stored as environment variables for pulling images to create a build
+    - echo "going to docker login with user ${DOCKERHUB_USER}"
+    - echo "${DOCKER_TOKEN}" | docker login --username "${DOCKERHUB_USER}" --password-stdin
     - mkdir -p /kaniko/.docker
     - >
       echo "{\"auths\":{\"${INTERNAL_REG}\":{\"auth\":\"$(printf
