--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,21 +66,20 @@ set-vars:
     name: gcr.io/kaniko-project/executor:v1.9.1-debug
     entrypoint: [""]
   before_script:
-    # Log in to Docker Hub using the username and token stored as environment variables for pulling images to create a build
-    # - echo "going to docker login with user ${DOCKER_USERNAME}"
-    # - echo "${DOCKER_TOKEN}" | docker login --username "${DOCKER_USERNAME}" --password-stdin
     - mkdir -p /kaniko/.docker
-    - echo "going to create kaniko config.json for auth for IMAGE_REGISTRY_USER ${IMAGE_REGISTRY_USER} and DOCKER_USERNAME ${DOCKER_USERNAME}"
+    - echo "going to create kaniko config.json for auth for ${INTERNAL_REG} -> '${IMAGE_REGISTRY_USER}' and https://index.docker.io/v1/ -> '${DOCKER_USERNAME}'"
     - >
-      echo "{\"auths\":{
-      \"${INTERNAL_REG}\":{
-        \"auth\":\"$(printf "%s:%s" "${IMAGE_REGISTRY_USER}" "${IMAGE_REGISTRY_PASS}" | base64 | tr -d '\n')\"
-        },
-        \"https://index.docker.io/v1/\":{
-          \"auth\":\"$(printf "%s:%s" "${DOCKER_USERNAME}" "${DOCKER_TOKEN}" | base64 | tr -d '\n')\"
+      echo "{\"
+        auths\":{
+          \"${INTERNAL_REG}\":{
+          \"auth\":\"$(printf "%s:%s" "${IMAGE_REGISTRY_USER}" "${IMAGE_REGISTRY_PASS}" | base64 | tr -d '\n')\"
+          },
+          \"https://index.docker.io/v1/\":{
+            \"auth\":\"$(printf "%s:%s" "${DOCKER_USERNAME}" "${DOCKER_TOKEN}" | base64 | tr -d '\n')\"
+          }
         }
-      }}" > /kaniko/.docker/config.json
-    - cat /kaniko/.docker/config.json
+      }" > /kaniko/.docker/config.json
+    # - cat /kaniko/.docker/config.json
   script:
     - echo "Check how the filesystem looks like for debugging"
     - ls -a
