--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,10 +67,16 @@ set-vars:
     entrypoint: [""]
   before_script:
     - mkdir -p /kaniko/.docker
+    - echo "going to create kaniko config.json for auth for ${INTERNAL_REG} -> '${IMAGE_REGISTRY_USER}' and https://index.docker.io/v1/ -> '${DOCKER_USERNAME}'"
     - >
-      echo "{\"auths\":{\"${INTERNAL_REG}\":{\"auth\":\"$(printf
-      "%s:%s" "${IMAGE_REGISTRY_USER}" "${IMAGE_REGISTRY_PASS}"
-      | base64 | tr -d '\n')\"}}}" > /kaniko/.docker/config.json
+      echo "{\"auths\":{
+      \"${INTERNAL_REG}\":{
+        \"auth\":\"$(printf "%s:%s" "${IMAGE_REGISTRY_USER}" "${IMAGE_REGISTRY_PASS}" | base64 | tr -d '\n')\"
+        },
+        \"https://index.docker.io/v1/\":{
+          \"auth\":\"$(printf "%s:%s" "${DOCKER_USERNAME}" "${DOCKER_TOKEN}" | base64 | tr -d '\n')\"
+        }
+      }}" > /kaniko/.docker/config.json
   script:
     - echo "Check how the filesystem looks like for debugging"
     - ls -a
