--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,9 +32,10 @@ variables:
 set-vars:
   stage: .pre
   image: docker.io/alpine:3.20
-  before_script:
-    - echo "going to docker login with user ${DOCKER_USERNAME}"
-    - echo "${DOCKER_TOKEN}" | docker login --username "${DOCKER_USERNAME}" --password-stdin
+  # before_script:
+  #   - >
+  #     apk add yq --no-cache
+  #     --repository=http://dl-cdn.alpinelinux.org/alpine/edge/community
   script:
     - cat .env >> build.env
     - source build.env
